# daisu-ide

./: .gitattributes  .gitignore  .npmrc  .size-limit.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  commitlint.config.cjs  lint-staged.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
.daisu/: agent.db-shm  agent.db-wal  symbols.db  symbols.db-shm  symbols.db-wal
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  quality.yml
apps/ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/ui/src/: App.tsx  main.tsx  styles.css
apps/ui/src/@types/: i18next.d.ts
apps/ui/src/api/: tauri.ts
apps/ui/src/components/agent/: ChatPanel.tsx  InlineEditOverlay.tsx  McpStatusChip.tsx  ModelInlinePicker.tsx  PermissionModal.tsx  StreamingJson.tsx  SymbolSearchPalette.tsx  ToolResultRenderer.tsx  ToolStatusBadge.tsx
apps/ui/src/components/bottompanel/: BottomPanel.tsx  OutputView.tsx  PlaceholderView.tsx  ProblemsView.tsx  TerminalSlot.tsx
apps/ui/src/components/editor/: Editor.tsx
apps/ui/src/components/layout/: ActivityBar.tsx  AgentsPanel.tsx  Breadcrumb.tsx  ConfigPanel.tsx  EditorArea.tsx  ResizeHandles.tsx  RightPanel.tsx  SearchPanel.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  Toolbar.tsx  WebView2Banner.tsx  WelcomeScreen.tsx
apps/ui/src/components/palette/: CommandPalette.tsx  FileSymbolPalette.tsx  LspWorkspaceSymbolPalette.tsx
apps/ui/src/components/search/: GlobFilters.tsx  ReplaceConfirmDialog.tsx  ReplaceInput.tsx  ResultLine.tsx  ResultsList.tsx  SearchInput.tsx
apps/ui/src/components/settings/: KeybindingsList.tsx  SettingsModal.tsx  SettingsSidebar.tsx  (+1 more)
apps/ui/src/hooks/: useAutoUpdate.ts  useDiscordRpc.ts  useEditorCursor.ts  useGitWatcher.ts  useKeybindings.ts  useSearchListeners.ts  useTheme.ts
apps/ui/src/i18n/: index.ts
apps/ui/src/lib/: action-handlers.ts  agent-edits.ts  agent-index.ts  agent-mcp.ts  agent-slash.ts  agent-tools.ts  agent.ts  copy.ts  error-translate.ts  file-icon.tsx  glob-defaults.ts  key-sound.ts  keybinding-registry.ts  language-list.ts  lsp.ts  monaco-editor-ref.ts  monaco-models.ts  monaco-tron-theme.ts  ollama-detect.ts  path-utils.ts  persistent-store.ts  scope-token-map.ts  search-highlight.tsx  session-schema.ts  terminal.ts  theme-loader.ts  theme-schema.ts
apps/ui/src/lsp/: codeActionAdapter.ts  completionAdapter.ts  definitionAdapter.ts  diagnosticsListener.ts  documentSymbolAdapter.ts  ensureModel.ts  formatAdapter.ts  hoverAdapter.ts  inlayHintAdapter.ts  monacoBridge.ts  positions.ts  referencesAdapter.ts  renameAdapter.ts  semanticTokensAdapter.ts  signatureHelpAdapter.ts  symbolIcons.ts  types.ts  workspaceEditApplier.ts
apps/ui/src/stores/: agentStore.ts  bottomPanelStore.ts  diagnosticsStore.ts  editorCursorStore.ts  gitStore.ts  inlineEditStore.ts  paletteStore.ts  permissionStore.ts  searchStore.ts  settingsStore.ts  shellsStore.ts  tabsStore.ts  terminalStore.ts  themesStore.ts  uiStore.ts  workspaceStore.ts
apps/ui/src/types/: tinykeys.d.ts
apps/ui/tests/: Editor.test.tsx  setup.ts
apps/ui/tests/__mocks__/: monaco-editor.ts  worker-stub.ts
apps/ui/tests/components/: Toast.test.tsx
apps/ui/tests/hooks/: useDebounce.test.ts  useGitWatcher.test.ts  useKeybindings.test.ts  useTheme.test.ts
apps/ui/tests/lib/: error-translate.test.ts  glob-defaults.test.ts  key-sound.test.ts  keybinding-registry.test.ts  monaco-models.test.ts  path-utils.test.ts  scope-token-map.test.ts  search-highlight.test.tsx  session-schema.test.ts  theme-loader.test.ts
apps/ui/tests/stores/: editorCursorStore.test.ts  gitStore.test.ts  searchStore.test.ts  settingsStore.test.ts  tabsStore.test.ts  themesStore.test.ts  uiStore.test.ts  workspaceStore.test.ts
apps/ui/tests/terminal/: terminalStore.test.ts
crates/daisu-agent/: Cargo.toml
crates/daisu-agent/src/: error.rs  keychain.rs  lib.rs  permission.rs  runtime.rs
crates/daisu-agent/src/index/: db.rs  mod.rs  parser.rs
crates/daisu-agent/src/mcp/: client.rs  mod.rs  protocol.rs  registry.rs  transport.rs
crates/daisu-agent/src/memory/: mod.rs  schema.sql  tokens.rs  window.rs
crates/daisu-agent/src/permission/: gate.rs  mod.rs
crates/daisu-agent/src/provider/: anthropic.rs  gemini.rs  lmstudio.rs  mod.rs  ollama.rs  openai.rs
crates/daisu-agent/src/tools/: dispatcher.rs  list_dir.rs  mod.rs  propose_edit.rs  read_file.rs  write_file.rs
crates/daisu-app/: Cargo.toml  tauri.conf.json
crates/daisu-app/capabilities/: default.json
crates/daisu-app/src/: error.rs  lib.rs  main.rs  state.rs  validation.rs
crates/daisu-app/src/commands/: agent.rs  discord.rs  file_ops.rs  git.rs  lsp.rs  mod.rs  search.rs  session.rs  settings.rs  terminal.rs  themes.rs  webview.rs  webview_stub.rs  workspace.rs
crates/daisu-app/src/git/: branch.rs  mod.rs  repo_handle.rs  status.rs
crates/daisu-app/src/search/: matcher.rs  mod.rs  registry.rs  replacer.rs  searcher.rs  walker.rs
crates/daisu-app/src/themes/: daisu-dark.json  daisu-light.json  tron-dark.json
crates/daisu-app/src/watch/: git_watcher.rs  mod.rs  workspace.rs
crates/daisu-app/tests/: error_envelope.rs  file_ops_copy.rs  file_ops_create.rs  file_ops_eol_encoding.rs  file_ops_list.rs  file_ops_rename.rs  file_ops_trash.rs  git.rs  git_watcher.rs  search.rs  search_replace.rs  session.rs  settings_io.rs  themes.rs  validation.rs  walker.rs  watcher.rs
crates/daisu-lsp/: Cargo.toml
crates/daisu-lsp/src/: client.rs  config.rs  diagnostics.rs  discovery.rs  dispatcher.rs  framing.rs  handshake.rs  jsonrpc.rs  language.rs  lib.rs  lifecycle.rs  requests.rs  transport.rs  trust.rs
crates/daisu-lsp/tests/: harness_smoke.rs  manager_ready_event.rs  manager_smoke.rs  requests_advanced.rs  requests_mutation.rs  requests_navigation.rs  transport_smoke.rs
crates/daisu-lsp/tests/common/: mod.rs
crates/daisu-term/: Cargo.toml
crates/daisu-term/src/: lib.rs  session.rs  shells.rs
(+86 files in other folders)
