[workspace]
resolver = "2"
members = ["crates/daisu-app", "crates/daisu-agent"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.84"
authors = ["Matias Palma <matiaspalma2594@gmail.com>"]
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/matiaspalmac/daisu-ide"

[workspace.dependencies]
tauri = { version = "2.1", features = [] }
tauri-build = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-window-state = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1", default-features = false }
notify = "8.2"
walkdir = "2.5"
trash = "5"
tokio-util = "0.7"
sha1 = "0.11"
async-trait = "0.1"
tokio-stream = "0.1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"
async-stream = "0.3"
keyring = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
