[package]
name = "daisu-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unnecessary_literal_bound = "allow"
duration_suboptimal_units = "allow"
doc_markdown = "allow"

[dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros", "time", "io-util"] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["io"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
async-stream.workspace = true
keyring.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
similar.workspace = true
