[package]
name = "daisu-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Daisu IDE — main Tauri binary"

[lints]
workspace = true

[lib]
name = "daisu_app"
path = "src/lib.rs"

[[bin]]
name = "daisu"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-store = { workspace = true }
tauri-plugin-window-state = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }
notify = { workspace = true }
walkdir = { workspace = true }
trash = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
sha1 = { workspace = true }
ignore = "0.4"
grep-matcher = "0.1"
grep-searcher = "0.1"
grep-regex = "0.1"
regex = "1"
git2 = { version = "0.20", default-features = false }
encoding_rs = "0.8"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
discord-rich-presence = "0.2"
daisu-agent = { path = "../daisu-agent" }
futures = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-registry = "0.6"

[dev-dependencies]
tempfile = "3.13"
