[package]
name = "daisu-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
lsp-types = "0.97"
tokio = { workspace = true, features = ["process", "sync", "io-util", "macros", "rt", "time"] }
tokio-util = { workspace = true, features = ["io"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
slotmap = "1.0"
arc-swap = "1.7"
parking_lot = "0.12"
url = "2"
toml = "0.8"
chrono.workspace = true
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
