[package]
name = "daisu-term"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
portable-pty = "0.8"
tokio = { workspace = true, features = ["sync", "rt", "macros", "time", "io-util"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
parking_lot = "0.12"
uuid = { workspace = true, features = ["v4"] }
tracing = "0.1"
dirs = "5"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
